--- a/_posts/2016/2016-04-30-Kiran.md
+++ b/_posts/2016/2016-04-30-Kiran.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Story of Kiran
-description: Education for underprivileged children
+excerpt: Education for underprivileged children
 ---
 
 One evening I was going through all the photos on my phone when I stumbled on the picture dated 07-02-2016 of a shy little girl. The glimpse of her smile and sparkling eyes took me back to that day when she left for her village with her parents and brother.
